--- a/themes/light.css
+++ b/themes/light.css
@@ -11,9 +11,9 @@ QToolTip {
 	border: 1px solid #CCC;
 	background-image: none;
 	background-position: left center;
-    background-repeat: no-repeat;
+	background-repeat: no-repeat;
 	border: none;
-	border-left: 2px solid rgb(255, 121, 198);
+	border-left: 2px solid rgb(121, 179, 255);
 	text-align: left;
 	padding-left: 8px;
 }
@@ -23,13 +23,14 @@ Bg App */
 #bgApp {	
 	background-color: #f5f5fa;
 	border: 1px solid #CCC;
-    color: #44475a;
+	color: #44475a;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Left Menu */
 #leftMenuBg {	
 	background-color: #ffffff;
+	border-right: 1px solid #c0c0c0;
 }
 #topLogo {
 	background-color: #ffffff;
@@ -37,19 +38,22 @@ Left Menu */
 	background-position: centered;
 	background-repeat: no-repeat;
 }
-#titleLeftApp { font: 63 12pt "Segoe UI Semibold"; color: #f8f8f2; }
-#titleLeftDescription { font: 8pt "Segoe UI"; color: #bd93f9; }
+#titleLeftApp { font: 63 12pt "Segoe UI Semibold"; color: #2f93e1; }
+#titleLeftDescription { font: 8pt "Segoe UI"; color: #2f93e1; }
 
 /* MENUS */
+#topMenu {
+	padding-right: 1px;
+}
 #topMenu .QPushButton {	
 	background-position: left center;
-    background-repeat: no-repeat;
+	background-repeat: no-repeat;
 	border: none;
 	border-left: 22px solid transparent;
 	background-color: transparent;
 	text-align: left;
 	padding-left: 44px;
-    color: #f8f8f2;
+	color: #383838;
 }
 #topMenu .QPushButton:hover {
 	background-color: #f2f6ff;
@@ -60,29 +64,29 @@ Left Menu */
 }
 #bottomMenu .QPushButton {	
 	background-position: left center;
-    background-repeat: no-repeat;
+	background-repeat: no-repeat;
 	border: none;
 	border-left: 20px solid transparent;
 	background-color:transparent;
 	text-align: left;
 	padding-left: 44px;
-    color: #f8f8f2;
+	color: #4d4d4d;
 }
 #bottomMenu .QPushButton:hover {
-	background-color: #bd93f9;
+	background-color: #2f93e1;
 }
 #bottomMenu .QPushButton:pressed {	
-	background-color: #ff79c6;
+	background-color: #2f93e1;
 	color: rgb(255, 255, 255);
 }
 #leftMenuFrame{
-	border-top: 3px solid #2f93e1;
+	border-top: 0px solid #ffffff;
 }
 
 /* Toggle Button */
 #toggleButton {
 	background-position: left center;
-    background-repeat: no-repeat;
+	background-repeat: no-repeat;
 	border: none;
 	border-left: 20px solid transparent;
 	background-color: #f2f6ff;
@@ -105,49 +109,53 @@ Left Menu */
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Extra Tab */
 #extraLeftBox {	
-	background-color: #495474;
-    color: #f8f8f2;
+	background-color: #f2f6ff;
+	border-right: 1px solid rgb(224, 224, 224);
+	border-left: 1px solid rgb(224, 224, 224);
+	color: #2f93e1;
 }
 #extraTopBg{	
-	background-color: rgb(189, 147, 249)
+	background-color: #f2f6ff;
+	border-right: 1px solid rgb(224, 224, 224);
+	border-left: 1px solid rgb(224, 224, 224);
 }
 
 /* Icon */
 #extraIcon {
 	background-position: center;
 	background-repeat: no-repeat;
-	background-image: url(:/resources/images/icons/icon_settings.png);
+	background-image: url(:/resources/images/icons/icon_settings_black.png);
 }
 
 /* Label */
-#extraLabel { color: rgb(255, 255, 255); }
+#extraLabel { color: rgb(88, 88, 88); }
 
 /* Btn Close */
 #extraCloseColumnBtn { background-color: rgba(255, 255, 255, 0); border: none;  border-radius: 5px; }
-#extraCloseColumnBtn:hover { background-color: rgb(196, 161, 249); border-style: solid; border-radius: 4px; }
-#extraCloseColumnBtn:pressed { background-color: rgb(180, 141, 238); border-style: solid; border-radius: 4px; }
+#extraCloseColumnBtn:hover { background-color: rgb(161, 196, 249); border-style: solid; border-radius: 4px; }
+#extraCloseColumnBtn:pressed { background-color: rgb(161, 196, 249); border-style: solid; border-radius: 4px; }
 
 /* Extra Content */
 #extraContent{
-	border-top: 3px solid #ffffff;
+	border-top: 3px solid #2f93e1;
 }
 
 /* Extra Top Menus */
 #extraTopMenu .QPushButton {
-    background-position: left center;
-    background-repeat: no-repeat;
+	background-position: left center;
+	background-repeat: no-repeat;
 	border: none;
 	border-left: 22px solid transparent;
 	background-color:transparent;
 	text-align: left;
 	padding-left: 44px;
-    color: #f8f8f2;
+	color: #2f93e1;
 }
 #extraTopMenu .QPushButton:hover {
 	background-color: #5d6c99;
 }
 #extraTopMenu .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
+	background-color: rgb(161, 196, 249);
 	color: rgb(255, 255, 255);
 }
 
@@ -160,40 +168,40 @@ Content App */
 	border-top: 3px solid #2f93e1;
 }
 #titleRightInfo{
-    color: #0f2c52;
+	color: #0f2c52;
 }
 
 /* Top Buttons */
 #rightButtons .QPushButton { background-color: rgba(255, 255, 255, 0); border: none;  border-radius: 5px; }
-#rightButtons .QPushButton:hover { background-color: #bd93f9; border-style: solid; border-radius: 4px; }
-#rightButtons .QPushButton:pressed { background-color: #ff79c6; border-style: solid; border-radius: 4px; }
+#rightButtons .QPushButton:hover { background-color: #f2f6ff; border-style: solid; border-radius: 4px; }
+#rightButtons .QPushButton:pressed { background-color: #2f93e1; border-style: solid; border-radius: 4px; }
 
 /* Theme Settings */
-#extraRightBox { background-color: #495474; }
-#themeSettingsTopDetail { background-color: #ffffff; }
+#extraRightBox { background-color: #f5f8ff; }
 
 /* Bottom Bar */
-#bottomBar { background-color: #495474 }
-#bottomBar QLabel { font-size: 11px; color: #f8f8f2; padding-left: 10px; padding-right: 10px; padding-bottom: 2px; }
+#bottomBar { background-color: #beceff }
+#bottomBar QLabel { font-size: 11px; color: #525252; padding-left: 10px; padding-right: 10px; padding-bottom: 2px; }
 
 /* CONTENT SETTINGS */
 /* MENUS */
 #contentSettings .QPushButton {
-    background-position: left center;
-    background-repeat: no-repeat;
+	background-position: left center;
+	background-repeat: no-repeat;
 	border: none;
 	border-left: 22px solid transparent;
 	background-color:transparent;
 	text-align: left;
 	padding-left: 44px;
-    color: #f8f8f2;
+	color: #333333;
 }
 #contentSettings .QPushButton:hover {
-	background-color: #5d6c99;
+	background-color: #2f93e1;
+	color: #f2f6ff;
 }
 #contentSettings .QPushButton:pressed {	
-	background-color: rgb(189, 147, 249);
-	color: rgb(255, 255, 255);
+	background-color: #46afff;
+	color: #f2f6ff;
 }
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 QTableWidget */
@@ -202,7 +210,7 @@ QTableWidget {
 	padding: 10px;
 	border-radius: 5px;
 	gridline-color: #9faeda;
-    outline: none;
+	outline: none;
 }
 QTableWidget::item{
 	border-color: #9faeda;
@@ -212,7 +220,7 @@ QTableWidget::item{
 }
 QTableWidget::item:selected{
 	background-color: rgb(189, 147, 249);
-    color: #f8f8f2;
+	color: #f8f8f2;
 }
 QHeaderView::section{
 	background-color: #ffffff;
@@ -225,34 +233,36 @@ QTableWidget::horizontalHeader {
 }
 QHeaderView::section:horizontal
 {
-    border: 1px solid #ffffff;
+	border: 1px solid #ffffff;
 	background-color: #ffffff;
 	padding: 3px;
 	border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
-    color: #f8f8f2;
+	border-top-right-radius: 7px;
+	color: #f8f8f2;
 }
 QHeaderView::section:vertical
 {
-    border: 1px solid #ffffff;
+	border: 1px solid #ffffff;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 LineEdit */
 QLineEdit {
 	background-color: #ffffff;
-	border-radius: 5px;
-	border: 2px solid #ffffff;
+	border-radius: 2px;
+	border: 1px solid #5f5f5f;
 	padding-left: 10px;
+	padding-bottom: 5px;
+	padding-top: 5px;
 	selection-color: rgb(255, 255, 255);
-	selection-background-color: rgb(255, 121, 198);
-    color: #f8f8f2;
+	selection-background-color: #2f93e1;
+	color: #868686;
 }
 QLineEdit:hover {
-	border: 2px solid rgb(64, 71, 88);
+	border: 1px solid #6a7cb1;
 }
 QLineEdit:focus {
-	border: 2px solid #ff79c6;
+	border: 1px solid #2f93e1;;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
@@ -262,229 +272,223 @@ QPlainTextEdit {
 	border-radius: 5px;
 	padding: 10px;
 	selection-color: rgb(255, 255, 255);
-	selection-background-color: rgb(255, 121, 198);
-    color: #f8f8f2;
+	selection-background-color: 2f93e1;
+	color: #f8f8f2;
 }
 QPlainTextEdit  QScrollBar:vertical {
-    width: 8px;
- }
+	width: 8px;
+}
 QPlainTextEdit  QScrollBar:horizontal {
-    height: 8px;
- }
+	height: 8px;
+}
 QPlainTextEdit:hover {
 	border: 2px solid rgb(64, 71, 88);
 }
 QPlainTextEdit:focus {
-	border: 2px solid #ff79c6;
+	border: 2px solid #2f93e1;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 ScrollBars */
 QScrollBar:horizontal {
-    border: none;
-    background: #ffffff;
-    height: 8px;
-    margin: 0px 21px 0 21px;
+	border: none;
+	background: #ffffff;
+	height: 8px;
+	margin: 0px 21px 0 21px;
 	border-radius: 0px;
 }
 QScrollBar::handle:horizontal {
-    background: rgb(189, 147, 249);
-    min-width: 25px;
+	background: rgb(189, 147, 249);
+	min-width: 25px;
 	border-radius: 4px
 }
 QScrollBar::add-line:horizontal {
-    border: none;
-    background: #ffffff;
-    width: 20px;
+	border: none;
+	background: #ffffff;
+	width: 20px;
 	border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
-    subcontrol-position: right;
-    subcontrol-origin: margin;
+	border-bottom-right-radius: 4px;
+	subcontrol-position: right;
+	subcontrol-origin: margin;
 }
 QScrollBar::sub-line:horizontal {
-    border: none;
-    background: #ffffff;
-    width: 20px;
+	border: none;
+	background: #ffffff;
+	width: 20px;
 	border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    subcontrol-position: left;
-    subcontrol-origin: margin;
+	border-bottom-left-radius: 4px;
+	subcontrol-position: left;
+	subcontrol-origin: margin;
 }
 QScrollBar::up-arrow:horizontal, QScrollBar::down-arrow:horizontal
 {
-     background: none;
+	background: none;
 }
 QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
 {
-     background: none;
+	background: none;
 }
- QScrollBar:vertical {
+QScrollBar:vertical {
 	border: none;
-    background-color: #ffffff;
-    width: 8px;
-    margin: 21px 0 21px 0;
+	background-color: #ffffff;
+	width: 8px;
+	margin: 21px 0 21px 0;
 	border-radius: 0px;
- }
- QScrollBar::handle:vertical {	
+}
+QScrollBar::handle:vertical {	
 	background: rgb(189, 147, 249);
-    min-height: 25px;
+	min-height: 25px;
 	border-radius: 4px
- }
- QScrollBar::add-line:vertical {
-     border: none;
-    background: #ffffff;
-     height: 20px;
-	border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-     subcontrol-position: bottom;
-     subcontrol-origin: margin;
- }
- QScrollBar::sub-line:vertical {
+}
+QScrollBar::add-line:vertical {
 	border: none;
-    background: #ffffff;
-     height: 20px;
+	background: #ffffff;
+	height: 20px;
+	border-bottom-left-radius: 4px;
+	border-bottom-right-radius: 4px;
+	subcontrol-position: bottom;
+	subcontrol-origin: margin;
+}
+QScrollBar::sub-line:vertical {
+	border: none;
+	background: #ffffff;
+	height: 20px;
 	border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-     subcontrol-position: top;
-     subcontrol-origin: margin;
- }
- QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
-     background: none;
- }
+	border-top-right-radius: 4px;
+	subcontrol-position: top;
+	subcontrol-origin: margin;
+}
+QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
+	background: none;
+}
 
- QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
-     background: none;
- }
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+	background: none;
+}
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 CheckBox */
 QCheckBox::indicator {
-    border: 3px solid #ffffff;
+	border: 3px solid #5e5e5e;
 	width: 15px;
 	height: 15px;
 	border-radius: 10px;
-    background: #ffffff;
+	background: #f5f7ff;
 }
 QCheckBox::indicator:hover {
-    border: 3px solid rgb(119, 136, 187);
+	border: 3px solid #2f93e1
 }
 QCheckBox::indicator:checked {
-    background: 3px solid #bd93f9;
-	border: 3px solid #bd93f9;	
+	background: 3px solid #2f93e1;
+	border: 3px solid #2f93e1;
 	background-image: url(:/resources/images/icons/cil-check-alt.png);
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 RadioButton */
 QRadioButton::indicator {
-    border: 3px solid #ffffff;
+	border: 3px solid #5e5e5e;
 	width: 15px;
 	height: 15px;
 	border-radius: 10px;
-    background: #ffffff;
+	background: #f5f7ff;
 }
 QRadioButton::indicator:hover {
-    border: 3px solid rgb(119, 136, 187);
+	border: 3px solid rgb(119, 136, 187);
 }
 QRadioButton::indicator:checked {
-    background: 3px solid #bd93f9;
-	border: 3px solid #bd93f9;	
+	background: 2px solid #2d6d9e;
+	border: 3px solid #2f93e1;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 ComboBox */
 QComboBox{
 	background-color: #ffffff;
-	border-radius: 5px;
-	border: 2px solid #ffffff;
+	border-radius: 2px;
+	border: 1px solid #505050;
 	padding: 5px;
 	padding-left: 10px;
-    color: #f8f8f2;
+	color: #424242;
 }
 QComboBox:hover{
-	border: 2px solid #7284b9;
+	border: 1px solid #2f93e1;
 }
 QComboBox::drop-down {
 	subcontrol-origin: padding;
 	subcontrol-position: top right;
 	width: 25px; 
-	border-left-width: 3px;
-	border-left-color: #ffffff;
-	border-left-style: solid;
 	border-top-right-radius: 3px;
 	border-bottom-right-radius: 3px;	
 	background-image: url(:/resources/images/icons/cil-arrow-bottom.png);
 	background-position: center;
 	background-repeat: no-reperat;
- }
+}
 QComboBox QAbstractItemView {
-	color: rgb(255, 121, 198);	
+	color: #505050; 
 	background-color: #ffffff;
 	padding: 10px;
-	selection-background-color: #ffffff;
+	selection-background-color: #2f93e1;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Sliders */
 QSlider::groove:horizontal {
-    border-radius: 5px;
-    height: 10px;
+	border-radius: 5px;
+	height: 10px;
 	margin: 0px;
 	background-color: #ffffff;
 }
-QSlider::groove:horizontal:hover {
-	background-color: #ffffff;
-}
 QSlider::handle:horizontal {
-    background-color: rgb(189, 147, 249);
-    border: none;
-    height: 10px;
-    width: 10px;
-    margin: 0px;
+	background-color: #2f93e1;  
+	border: none;
+	height: 10px;
+	width: 10px;
+	margin: 0px;
 	border-radius: 5px;
 }
 QSlider::handle:horizontal:hover {
-    background-color: rgb(195, 155, 255);
+	background-color: rgb(195, 155, 255);
 }
 QSlider::handle:horizontal:pressed {
-    background-color: rgb(255, 121, 198);
+	background-color: #2f93e1
 }
 
 QSlider::groove:vertical {
-    border-radius: 5px;
-    width: 10px;
-    margin: 0px;
+	border-radius: 5px;
+	width: 10px;
+	margin: 0px;
 	background-color: #ffffff;
 }
 QSlider::groove:vertical:hover {
 	background-color: #ffffff;
 }
 QSlider::handle:vertical {
-    background-color: rgb(189, 147, 249);
+	background-color: rgb(189, 147, 249);
 	border: none;
-    height: 10px;
-    width: 10px;
-    margin: 0px;
+	height: 10px;
+	width: 10px;
+	margin: 0px;
 	border-radius: 5px;
 }
 QSlider::handle:vertical:hover {
-    background-color: rgb(195, 155, 255);
+	background-color: rgb(195, 155, 255);
 }
 QSlider::handle:vertical:pressed {
-    background-color: rgb(255, 121, 198);
+	background-color: #2f93e1;
 }
 
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 CommandLinkButton */
 #pagesContainer QCommandLinkButton {	
-	color: rgb(255, 121, 198);
+	color: #2f93e1;
 	border-radius: 5px;
 	padding: 5px;
-    border: 2px solid #ff79c6;
-    color: #ff79c6;
+	border: 2px solid #2f93e1;
+	color: #2f93e1
 }
 #pagesContainer QCommandLinkButton:hover {	
-	color: rgb(255, 170, 255);
+	color: #2f93e1;
 	background-color: #ffffff;
 }
 #pagesContainer QCommandLinkButton:pressed {	
@@ -495,16 +499,18 @@ CommandLinkButton */
 /* /////////////////////////////////////////////////////////////////////////////////////////////////
 Button */
 #pagesContainer QPushButton {
-	border: 2px solid #ffffff;
+	border: 2px solid #2f93e1;
 	border-radius: 5px;	
 	background-color: #ffffff;
-    color: #f8f8f2;
+	color: #f8f8f2;
 }
 #pagesContainer QPushButton:hover {
 	background-color: #7082b6;
 	border: 2px solid #7082b6;
 }
 #pagesContainer QPushButton:pressed {	
-	background-color: #546391;
-	border: 2px solid #ff79c6;
+	background-color: #2f93e1;
+	border: 2px solid #2f93e1;
 }
+
+
